# Mirage

./: .gitignore  CMakeLists.txt  CleanMirageDB.pl  Dockerfile_build  Dockerfile_run  DownloadGenomicData.pl  Makefile  PrepMirageDB.pl  README  README.md  SETUP.pl  install-dependencies.sh  mirage.pl
.github/workflows/: build-and-test.yml  container.yaml
dependencies/: .gitignore  Compare-Spaln-Outputs.pl  blat.tgz  blatSrc36.tgz  hsi-1.0.0.tgz  install-test.tgz
docs/: index.html  index.md
inc/: hsi.tgz
src/: BasicBio.c  BasicBio.h  Bazaar.pl  Bureaucracy.pm  BureaucracyMirage.pm  DiagonalSets.pm  Diagonals.c  Diagonals.h  DisplayProgress.pm  Diviner.pl  DownloadGenomicData.pl  ExonWeaver.c  FastDiagonals.c  FastMap.c  FastMap2.c  FinalMSA.pl  FindDiagonals.c  HitWeaver.c  MapsToMSAs.pl  Mirage.pl  Mirage2.pl  MultiMSA.pl  MultiSeqNW.c  MultiSeqNW.h  Oasis.pl  PartialMap.pl  PrepMirageDB.pl  ProgressTimer.pl  Quilter.pl  Quilter2.pl  TransSW.c  install-dependencies.sh  makefile  run_bazaar.sh  run_diviner.sh  run_mirage.sh  run_mirage2.sh  run_oasis.sh
tool/: build-builder-image.sh  build-runner-image.sh  push-builder-image.sh  push-runner-image.sh
